# rubbersoul

./: .env.example  .gitignore  README.md  SKILL.md  SKILLS.md  env.yml  format_and_lint.sh  pyproject.toml
src/rubbersoul/: __main__.py
src/rubbersoul/cli/: cli.py
src/rubbersoul/config/: config.py  config.py~
src/rubbersoul/core/: commit_generator.py  commit_schema.py  git_ops.py  session.py
src/rubbersoul/skills/: SKILL.md
src/rubbersoul/utils/: logger.py  utils.py
