[project]
name = "rubbersoul"
version = "0.1.0"
description = "Rubber Soul - Ollama Automation Commit Message Tool"
requires-python = "==3.12"
dependencies = [
    "ollama",
    "pathspec",
    "langchain-core>=0.3",
	"langchain-text-splitters",
	"tiktoken",
	"pydantic",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
rubbersoul = "rubbersoul.__main__:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]  # common error/warning codes
