[project]
name = "rubbersoul"
version = "0.1.0"
description = "Rubber Soul - Ollama Automation Commit Message Tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama",
    "pathspec",
    "langchain-core>=0.3",
	"langchain-ollama",
	"langchain-text-splitters",
	"tiktoken",
	"pydantic",
    "psutil",
    "nvidia-ml-py",
    "pyrsmi", 
	"python-dotenv",
]

[dependency-groups]
dev = [
    "ruff >= 0.8.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
rubbersoul = ["skills/*.md"]

[project.scripts]
rubbersoul = "rubbersoul.__main__:main"

